# numhask

./: .ghci  .gitattributes  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  ChangeLog.md  LICENSE  brittany.yaml  cabal.project  checklist.org  haskell-ci.config  hie.yaml  numhask.cabal  package.yaml  readme.md  stack-8.2.yaml  stack-ci.yaml  stack-ghc86.yaml  stack.yaml  weeder.dhall
.github/workflows/: ci.yml  github-actions-demo.yml  haskell-ci-generated.yml  haskell-ci.yml
checkers-numhask/: LICENSE  README.md  checkers-numhask.cabal  stack.yaml
checkers-numhask/src/Test/QuickCheck/: Checkers.hs  Utils.hs
checkers-numhask/src/Test/QuickCheck/Checkers/: NumHask.hs
checkers-numhask/test/: LibSpec.hs
docs/: doctest-parallel-restoration.md
hunit-numhask/: .travis.yml  LICENSE  README.md  hunit-numhask.cabal  stack.yaml
hunit-numhask/src/Test/HUnit/: NumHask.hs
hunit-numhask/test/: LibSpec.hs
numhask/: numhask.cabal  package.yaml  stack.yaml
numhask-array/: numhask-array.cabal  package.yaml  stack.yaml
numhask-array/src/NumHask/: Array.hs  Matrix.hs  Shape.hs  Vector.hs
numhask-array/src/NumHask/Array/: Constraints.hs  Dynamic.hs  Example.hs  Fixed.hs  HMatrix.hs  HMatrixV.hs  Shape.hs  Simple.hs  Storable.hs  Unboxed.hs
numhask-array/src/NumHask/Matrix/: Unboxed.hs
numhask-array/test/: test.hs
numhask-bench/: LICENSE  bench.html  bench.md  numhask-bench.cabal  package.yaml  readme.md  stack.yaml
numhask-bench/bench/: bench.hs  bench.md
numhask-bench/other/: array.md  bench_.md  footer.md  lhs.css  ops.md  test.md
numhask-graph/: numhask-graph.cabal  package.yaml  readme.md  stack.yaml
numhask-graph/app/: numhask-graph.hs  numhask-typeclasses.hs
numhask-hedgehog/: LICENSE  numhask-hedgehog.cabal  stack.yaml
numhask-hedgehog/src/NumHask/: Hedgehog.hs
numhask-hedgehog/src/NumHask/Data/: Interval.hs
numhask-hedgehog/src/NumHask/Hedgehog/: Gen.hs  Prop.hs  Props.hs
numhask-hedgehog/src/NumHask/Hedgehog/Prop/: Interval.hs  Space.hs
numhask-hedgehog/test/: test.hs
numhask-prelude/: numhask-prelude.cabal  package.yaml  stack.yaml
numhask-prelude/src/NumHask/: Error.hs  Examples.hs  Laws.hs  Prelude.hs
numhask-prelude/test/: test.hs
numhask-space/: numhask-space.cabal  stack.yaml
numhask-space/src/NumHask/Analysis/: Space.hs
numhask-space/src/NumHask/Data/: Interval.hs  IntervalD.hs  IntervalXY.hs  Range.hs  RangeD.hs  Rect.hs
numhask-test/: numhask-test.cabal  stack.yaml
numhask-test/src/NumHask/: Laws.hs
numhask-test/src/NumHask/Data/: Interval.hs
numhask-test/src/NumHask/Laws/: Interval.hs
numhask-test/test/: test.hs
numhask/src/NumHask/: Algebra.hs  Data.hs  Exception.hs
numhask/src/NumHask/Algebra/: Abstract.hs  Addition.hs  Additive.hs  Additive.hs-boot  Basis.hs  Distribution.hs  Field.hs  Group.hs  Integral.hs  Metric.hs  Module.hs  Multiplication.hs  Multiplicative.hs  Multiplicative.hs-boot  Natural.hs  PreludeCompat.hs  Rational.hs  Ring.hs  Singleton.hs
numhask/src/NumHask/Algebra/Abstract/: Action.hs  Addition.hs  Additive.hs  Field.hs  Group.hs  Homomorphism.hs  Lattice.hs  Module.hs  Multiplication.hs  Multiplicative.hs  Ring.hs  TensorProduct.hs
numhask/src/NumHask/Algebra/Linear/: Hadamard.hs
numhask/src/NumHask/Analysis/: Banach.hs  Metric.hs
numhask/src/NumHask/Data/: Complex.hs  Integral.hs  Interval.hs  LogField.hs  Pair.hs  Positive.hs  PreludeCompat.hs  Rational.hs  Wrapped.hs
src/: NumHask.hs
src/NumHask/: Algebra.hs  Examples.hs  Exception.hs  Free.hs  HasShape.hs  Laws.hs  Matrix.hs  Naperian.hs  Num.hs  Prelude.hs  Shape.hs  Tensor.hs  Vector.hs
src/NumHask/Algebra/: Abstract.hs  Action.hs  Additive.hs  Basis.hs  Distribution.hs  Exponential.hs  Field.hs  Group.hs  Integral.hs  Lattice.hs  Magma.hs  Metric.hs  Module.hs  Monus.hs  Multiplicative.hs  Ordering.hs  Patterns.hs  Ring.hs  Tropical.hs
src/NumHask/Algebra/Abstract/: Action.hs  Additive.hs  Field.hs  Group.hs  Lattice.hs  Module.hs  Multiplicative.hs  Ring.hs
src/NumHask/Analysis/: Metric.hs
src/NumHask/Data/: Complex.hs  Integral.hs  LogField.hs  Pair.hs  Positive.hs  Rational.hs  Wrapped.hs
src/NumHask/Free/: Additive.hs  Carriers.hs  Divisive.hs  Multiplicative.hs  Polynomial.hs  Ring.hs  StarSemiring.hs  Subtractive.hs
test/: doctests.hs  test.hs
tools/numhask-typeclasses/: README.md  numhask-typeclasses.cabal  stack.yaml
tools/numhask-typeclasses/app/: Main.hs
