cabal-version: 3.0
name: numhask
version: 0.13.2.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask#readme
bug-reports: https://github.com/tonyday567/numhask/issues
synopsis: A numeric class hierarchy.
description:
  This package provides alternative numeric classes over Prelude.

  The numeric class constellation looks somewhat like:

  ![nh](docs/other/nh12.svg)

  == Usage

  >>> {-# LANGUAGE GHC2024 #-}
  >>> {-# LANGUAGE RebindableSyntax #-}
  >>> import NumHask.Prelude

  See "NumHask" for a detailed overview.

build-type: Simple
tested-with:
  ghc ==9.10.3
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  other/*.svg
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends: base >=4.14 && <5
  exposed-modules:
    NumHask
    NumHask.Algebra.Action
    NumHask.Algebra.Additive
    NumHask.Algebra.Field
    NumHask.Algebra.Group
    NumHask.Algebra.Lattice
    NumHask.Algebra.Metric
    NumHask.Algebra.Multiplicative
    NumHask.Algebra.Patterns
    NumHask.Algebra.Ring
    NumHask.Data.Complex
    NumHask.Data.Integral
    NumHask.Data.Positive
    NumHask.Data.Rational
    NumHask.Data.Wrapped
    NumHask.Exception
    NumHask.Prelude

  default-extensions: RebindableSyntax

