name: numhask-array
version: 0.3.0.1
synopsis:
  n-dimensional arrays
description:
  n-dimensional arrays founded on numhask.
category:
  project
homepage:
  https://github.com/tonyday567/numhask-array#readme
bug-reports:
  https://github.com/tonyday567/numhask-array/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD3
license-file:
  LICENSE
tested-with:
  GHC==8.4.1
build-type:
  Simple
cabal-version:
  1.18
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask
  subdir:
    numhask-array
library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.11 && <5
    , adjunctions >=4.0 && <5
    , deepseq >=1.4.2.0 && <2
    , distributive >=0.4 && <0.7
    , numhask
    , numhask-prelude >=0.3 && <0.4
    , protolude >=0.2 && <0.3
    , vector >=0.10 && <0.13
    , hmatrix
  exposed-modules:
    NumHask.Array.HMatrix
    NumHask.Array.Fixed
    NumHask.Array.Dynamic
    NumHask.Array.Shape
  default-language: Haskell2010
test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    test.hs
  hs-source-dirs:
    test
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  build-depends:
      base >=4.11 && <5
    , doctest >=0.13 && <0.17
    , numhask-array >=0.3 && <0.4
    , numhask-prelude >=0.3 && <0.4
    , numhask-hedgehog >=0.3 && <0.4
    , hedgehog >=0.5 && <1.1
  default-language: Haskell2010
