name: numhask-bench
version: 0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask/numhask-bench#readme
bug-reports:
  https://github.com/tonyday567/numhask/numhask-bench/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  1.18
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask
  subdir:
    numhask-array
executable numhask-bench
  main-is:
    bench.hs
  hs-source-dirs:
    bench
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , matrix
    , numhask
    , numhask-array
    , numhask-prelude >= 0.3 && < 0.4
    , optparse-generic
    , perf >= 0.4.1.0
    , perf-analysis >= 0.0.1.1
    , protolude
    , text
    , vector
    , dense-linear-algebra
  default-language: Haskell2010
