name:           numhask-graph
version:        0.1.0
synopsis:       See readme.md
description:    See readme.md for description
category:       project
homepage:       https://github.com/tonyday567/numhask#readme
bug-reports:    https://github.com/tonyday567/numhask/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask

executable numhask-typeclasses
  main-is: numhask-typeclasses.hs
  hs-source-dirs:
                 app
  -- default-extensions: OverloadedStrings
  build-depends:
                base >=4.7 && <4.12
              , containers
              , haskell-src-exts
              , optparse-applicative
              , text
  
  
executable numhask-graph
  main-is: numhask-graph.hs
  hs-source-dirs:
      app
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options:
      -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
  build-depends:
      base >=4.7 && <4.12
    , containers
    , diagrams-graphviz
    , diagrams-lib
    , diagrams-svg
    , foldl
    , graphviz
    , primitive
    , protolude
    , text
  default-language: Haskell2010


