name: numhask-hedgehog
version: 0.3.1
synopsis:
  Laws and tests for numhask
description:
  Laws and tests for numhask.
category:
  mathematics
homepage:
  https://github.com/tonyday567/numhask#readme
bug-reports:
  https://github.com/tonyday567/numhask/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  1.18
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask
  subdir:
    numhask-hedgehog
library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , hedgehog >=0.5 && <1.1
    , numhask >=0.3 && <0.4
    , numhask-space >=0.2.0 && <0.4
    , numhask-prelude >=0.3 && <0.4
  exposed-modules:
    NumHask.Hedgehog
    NumHask.Hedgehog.Gen
    NumHask.Hedgehog.Prop
    NumHask.Hedgehog.Prop.Space
    NumHask.Hedgehog.Props
  default-language: Haskell2010
test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    test.hs
  hs-source-dirs:
    test
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  build-depends:
      base >=4.7 && <5
    , hedgehog >=0.5 && <1.1
    , numhask >=0.3 && <0.4
    , numhask-prelude >=0.3 && <0.4
    , numhask-hedgehog >=0.3 && <0.4
  default-language: Haskell2010
