name:           numhask-prelude
version:        0.1.0.0
synopsis:       A numeric prelude
description:    A numeric prelude, combining protolude and numhask.
category:       mathematics
homepage:       https://github.com/tonyday567/numhask#readme
bug-reports:    https://github.com/tonyday567/numhask/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.18

extra-source-files:
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask

library
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
  build-depends:
      base >=4.7 && <4.12
    , numhask >=0.2.2.0 && <0.3
    , protolude >=0.1 && <0.3
  exposed-modules:
      NumHask.Prelude
      NumHask.Error
      NumHask.Examples
  other-modules:
      Paths_numhask_prelude
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  build-depends:
      doctest
    , numhask-prelude
  default-language: Haskell2010
