name: numhask-prelude
version: 0.3.2
synopsis:
  A numeric prelude
description:
  A numeric prelude, combining protolude and numhask.
category:
  mathematics
homepage:
  https://github.com/tonyday567/numhask#readme
bug-reports:
  https://github.com/tonyday567/numhask/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  1.18
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask
  subdir:
    numhask-prelude
library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , numhask >=0.3 && <0.4
    , protolude >=0.1 && <0.3
  exposed-modules:
    NumHask.Prelude
    NumHask.Error
    NumHask.Examples
  default-language: Haskell2010
test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    test.hs
  hs-source-dirs:
    test
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  build-depends:
      doctest >=0.13 && <0.17
    , numhask-prelude >=0.3 && <0.4
  default-language: Haskell2010
