name: numhask-space
version: 0.1
synopsis:
  numerical spaces
description:
  Spaces as higher-kinded numbers.
category:
  mathematics
homepage:
  https://github.com/tonyday567/numhask#readme
bug-reports:
  https://github.com/tonyday567/numhask/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >= 1.18

extra-source-files:
  stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask

library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <4.12
    , numhask
    , adjunctions
    , semigroupoids
    , distributive
  exposed-modules:
    NumHask.Analysis.Space
    NumHask.Data.Range
    NumHask.Data.RangeD
    NumHask.Data.Rect
  other-modules:
  default-language: Haskell2010
