name: numhask
version: 0.3
synopsis:
  numeric classes
description:
  A numeric class heirarchy.
category:
  mathematics
homepage:
  https://github.com/tonyday567/numhask#readme
bug-reports:
  https://github.com/tonyday567/numhask/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >= 1.18

extra-source-files:
  stack.yaml

extra-doc-files:
  other/*.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask

library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <4.12
  exposed-modules:
    NumHask.Algebra.Abstract
    NumHask.Algebra.Abstract.Action
    NumHask.Algebra.Abstract.Additive
    NumHask.Algebra.Abstract.Field
    NumHask.Algebra.Abstract.Group
    NumHask.Algebra.Abstract.Homomorphism
    NumHask.Algebra.Abstract.Module
    NumHask.Algebra.Abstract.Multiplicative
    NumHask.Algebra.Abstract.Ring
    NumHask.Algebra.Abstract.TensorProduct
    NumHask.Algebra.Linear.Hadamard
    NumHask.Analysis.Banach
    NumHask.Analysis.Metric
    NumHask.Data.Complex   
    NumHask.Data.Integral
    NumHask.Data.Interval
    NumHask.Data.LogField
    NumHask.Data.Positive
    NumHask.Data.Rational
    NumHask.Data.Wrapped
    NumHask.Exception
  other-modules:
  default-language: Haskell2010
