cabal-version: 3.0
name: numhask
version: 0.4.0
synopsis:
  numeric classes
description:
  A numeric class heirarchy.
category:
  mathematics
homepage:
  https://github.com/tonyday567/numhask#readme
bug-reports:
  https://github.com/tonyday567/numhask/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD-3-Clause
license-file:
  LICENSE
build-type:
  Simple

extra-doc-files:
  other/*.svg

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask
  subdir:
    numhask
library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <5
  exposed-modules:
    NumHask.Algebra.Abstract
    NumHask.Algebra.Abstract.Action
    NumHask.Algebra.Abstract.Additive
    NumHask.Algebra.Abstract.Field
    NumHask.Algebra.Abstract.Group
    NumHask.Algebra.Abstract.Lattice
    NumHask.Algebra.Abstract.Module
    NumHask.Algebra.Abstract.Multiplicative
    NumHask.Algebra.Abstract.Ring
    NumHask.Algebra.Linear.Hadamard
    NumHask.Analysis.Metric
    NumHask.Data.Complex
    NumHask.Data.Integral
    NumHask.Data.LogField
    NumHask.Data.Pair
    NumHask.Data.Positive
    NumHask.Data.Rational
    NumHask.Data.Wrapped
    NumHask.Exception
  other-modules:
  default-language: Haskell2010
