name:                numhask-typeclasses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tonyday567/numhask-typeclasses
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5


executable numhask-typeclasses
  main-is: Main.hs
  hs-source-dirs:
                 app
  default-extensions: OverloadedStrings
  build-depends:
                base >=4.7 && <4.12
              , containers
              , haskell-src-exts
              , optparse-applicative
              , text  

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , numhask-typeclasses
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/tonyday567/numhask-typeclasses
